--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "ironfist",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Nodejs ready to go template",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -35,6 +36,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-validator": "^7.0.1",
+    "mongodb": "^6.5.0",
     "mongoose": "^8.2.1",
     "nodemon": "^3.1.0"
   }
